@@ -11,8 +11,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - modules/file + -T
 
-- <Perl> patch for *Match from Craig Lien <lien@rrnet.com>
-
 - Apache::Include->virtual should return run() value, not status()
 
 - win32 socket bug (WSAStartup() needed for each thread?)
